--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,189 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+      <fieldset class="fieldset-element">
+        <legend>Personal information</legend>
+        <label for="lastName" class="label">
+          Surname:
+          <input
+            type="text"
+            name="surname"
+            id="lastName"
+            autocomplete="off"
+            required
+          >
+        </label>
+
+        <label for="firstName" class="label">
+          Name:
+          <input
+            type="text"
+            name="name"
+            id="firstName"
+            autocomplete="off"
+            required
+          >
+        </label>
+
+        <label for="ages" class="label">
+          How old are You?
+          <input
+            type="number"
+            name="ages"
+            value="12"
+            id="ages"
+            required
+            min="1"
+            max="100"
+          >
+        </label>
+
+        <label for="dateOfBirth" class="label">
+          Full date of birth:
+          <input
+            type="date"
+            name="dateOfBirth"
+            id="dateOfBirth"
+            required
+          >
+        </label>
+
+        <label for="acceptTerms" class="label last-lable">
+          I accept the term of the agreement
+          <input
+            type="checkbox"
+            name="acceptTerms"
+            id="acceptTerms"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="fieldset-element">
+        <legend>Registration</legend>
+        <label for="emailField" class="label">
+          E-mail:
+          <input 
+            type="email" 
+            name="emailField"
+            placeholder="email@example.com"
+            id="emailField"
+            required
+          >
+        </label>
+
+        <label for="passwordField" class="label last-lable">
+          Password:
+          <input
+            type="password"
+            name="passwordField"
+            id="passwordField"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="fieldset-element">
+        <legend>An interesting fact about you!</legend>
+        <label for="loveCats" class="label">
+          Do you love cats?
+          <label for="loveCatsYes">
+            <input
+              type="radio"
+              name="loveCats"
+              value="Yes"
+              id="loveCatsYes"
+              required
+            >
+            Yes
+          </label>
+          <label for="loveCatsNo">
+            <input
+              type="radio"
+              name="loveCats"
+              value="No"
+              id="loveCatsNo"
+              required
+            >
+            No
+          </label>
+        </label>
+
+        <label for="favouriteColor" class="label">
+          What is your favorite color?
+          <input
+            type="color"
+            name="favouriteColor"
+            value="#000"
+            id="favouriteColor"
+            required
+          >
+        </label>
+
+        <label for="timeToBed" class="label">
+          What time do you go to bed?
+          <input
+            type="time"
+            name="timeToBed"
+            id="timeToBed"
+            step="1"
+            required
+          >
+        </label>
+
+        <label for="favouriteCarBrand" class="label">
+          What are your favorite brand of cars?
+          <select
+            name="favouriteCarBrand"
+            id="favouriteCarBrand"
+            multiple
+          >
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </label>
+
+        <label for="workRating" class="label last-lable">
+          How do you rate our work?
+          <input
+            type="range"
+            name="workRating"
+            id="workRating"
+            min="0"
+            max="100"
+            step="5"
+            value="0"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="fieldset-element">
+        <legend>Additional info:</legend>
+        <label for="commentsField" class="label">
+          Comments:
+          <textarea
+            name="comment"
+            id="commentsField"
+            cols="20"
+            rows="2"
+            minlength="10"
+            maxlength="150"
+          ></textarea>
+        </label>
+
+        <label for="recommendation" class="label last-lable">
+          Would you recommend us?
+          <select name="recommendation" id="recommendation">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </label>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
